--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "sharp": "^0.34.2",
     "vite": "^6.3.5",
     "vite-imagetools": "^7.1.0"
+  },
+  "engines": {
+    "node": ">=18.18.0",
+    "npm": ">=9.0.0"
   }
 }
